# ai-application

./: .env  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  server.ts  vite.config.ts
backend-server/: README.md  combine_client.py  custom_loader.py  database.py  index.py  knowledge.py  logger.py  main.py  models.py  pyproject.toml  util.py
backend-server/db/: record_manager_cache.db
src/: main.ts
src/components/: LeftChatList.vue  MiddleContent.vue
src/router/: index.ts
src/services/: chatService.ts  ragService.ts
src/stores/: conversation.ts
src/views/: Home.vue
