[project]
name = "backend-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet==5.2.0",
    "dashscope>=1.25.12",
    "fastapi>=0.135.1",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "langserve>=0.3.3",
    "loguru>=0.7.3",
    "python-multipart>=0.0.22",
    "rank-bm25>=0.2.2",
    "typing>=3.10.0.0",
    "unstructured>=0.21.5",
]
