[project]
name = "backend-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet==5.2.0",
    "chromadb>=1.5.2",
    "cryptography>=46.0.5",
    "dashscope>=1.25.12",
    "fastapi>=0.135.1",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "langserve>=0.3.3",
    "loguru>=0.7.3",
    "pymysql>=1.1.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pywin32>=311",
    "rank-bm25>=0.2.2",
    "sqlalchemy>=2.0.47",
    "typing>=3.10.0.0",
    "unstructured>=0.21.5",
    "uuid>=1.30",
    "uvicorn>=0.41.0",
]
